add mqtt library to the player

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required(VERSION 3.5)
 
 project (wavplayeralsa)
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 14)
 include_directories(src)
 
 # include third party header only libraries
 include_directories(thirdparty)
+include_directories(thirdparty/mqtt_cpp)
 
 set (SOURCES 
 	src/wavplayeralsa.cpp 
 	src/alsa_frames_transfer.cc 
 	src/web_sockets_api.cc
 	src/http_api.cc
+	src/mqtt_api.cc
 	src/audio_files_manager.cc
 )
 
