--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 bin/*
 obj/*
 Debug/*
+wavplayeralsa
 
 # Prerequisites
 *.d
@@ -46,3 +47,9 @@ python-tools/venv/*
 
 # IDE
 .vscode
+
+# Cmake
+CMakeFiles/*
+CMakeCache.txt
+Makefile
+cmake_install.cmake
