--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,6 +29,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386, linux/arm
+          platforms: linux/amd64,linux/arm
           push: true
           tags: blumamir/wavplayeralsa:latest
